force-app/main/default/objects/plaunch__Pipelaunch_Logging__c/plaunch__Pipelaunch_Logging__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Manage Logging system. Reserved for Admins and Advanced Users</description>
    <label>PipeLaunch Sales Engagement Logging</label>
</CustomObject>