force-app/main/default/objects/plaunch__Pipelaunch_Logging__c/fields/plaunch__Email_To__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Email_To__c</fullName>
    <inlineHelpText>Log file will be sent to this email address</inlineHelpText>
    <label>Email To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>