force-app/main/default/objects/plaunch__Pipelaunch_Logging__c/fields/plaunch__Enable__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable</label>
    <type>Checkbox</type>
</CustomField>