force-app/main/default/objects/plaunch__Pipelaunch_Logging__c/fields/plaunch__Log_Level__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Log_Level__c</fullName>
    <description>Define the Log Level</description>
    <inlineHelpText>Possible values are empty value for no debugging, debug, or error</inlineHelpText>
    <label>Log Level</label>
    <length>25</length>
    <type>Text</type>
</CustomField>