force-app/main/default/objects/plaunch__Pipelaunch_Logging__c/fields/plaunch__User_ID_Log__c.field-meta.xml
<CustomField>
    <fullName>plaunch__User_ID_Log__c</fullName>
    <inlineHelpText>User Id to be activated for logging</inlineHelpText>
    <label>User ID Log</label>
    <length>18</length>
    <type>Text</type>
</CustomField>